# Mamat_HW

HW0/: 2sum.c  digit_freq-2.c  digit_freq.c  edit_dist.c
HW4/: grades.c
HW6/: CMakeLists.txt  string-array.cpp  string-array.h  string.cpp  string.h
HW62/: CMakeLists.txt  Makefile  ip.cpp  ip.h  main.cpp  main_test.cpp  maintest.cpp  port.cpp  port.h  string-array.cpp  string-array.h  string.cpp  string.h  test_firewall.cpp
HW_1/: answers.txt  scrape_news.sh
HW_2/: answers.txt  calc_stat.sh  hist.c  max.c  mean.c  median.c  min.c
HW_3/: makefile  stack.c  stack.h  student.c  student.h
HW_6/: CMakeLists.txt  Makefile  firewall.sh  ip.cpp  ip.h  main.cpp  port.cpp  port.h  string-array.cpp  string-array.h  string.cpp  string.h
